--- a/vscodeserver/code-server-ingress.yml
+++ b/vscodeserver/code-server-ingress.yml
@@ -3,8 +3,12 @@ kind: Ingress
 metadata:
   name: code-server-ingress
   annotations:
-    nginx.ingress.kubernetes.io/rewrite-target: /$2
+    cert-manager.io/cluster-issuer: letsencrypt-prod
 spec:
+  tls:
+  - hosts:
+    - cloudwithsk.tk
+    secretName: code-server-tls
   rules:
   - host: cloudwithsk.tk
     http:
